--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -162,7 +162,7 @@
             { id: 'PM2323N', name: 'HAPPY BOOM SHOOT CAKE (4" 16 SHOT)', spec: '48/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'PM2424N', name: 'HAPPY BOOM SHOOT CAKE (4" 36 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
-            { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '4FBg9jcowP8' },
             { id: '2525', name: 'HAPPY BOOM COLOUR SUN SPARKLE 18"', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM2626N', name: 'HAPPY BOOM DUSH 30 (ROMAN CANDLE)', spec: '36/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM2727N', name: 'HAPPY BOOM TIKUS 50 (50 MISILES)', spec: '30/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
@@ -177,7 +177,7 @@
             { id: '3737', name: 'HAPPY BOOM THUNDER CLAP (SPECIAL ROCKETS)', spec: '30/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM3838N', name: 'HAPPY BOOM CILI PADI', spec: '300/10/26', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '2IiR5_6IiaA' },
             { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4242N', name: 'HAPPY BOOM BANANA KECIL', spec: '60/6', category: '单发系列', isSoldOut: false, youtubeId: '' },
@@ -185,7 +185,7 @@
             { id: 'PM4545N', name: 'HAPPY BOOM 10"ICE CREAM (FOUNTAIN)', spec: '10/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4646N', name: 'HAPPY BOOM SHOOT CAKE (4" 25 SHOT)', spec: '24/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'PM4747N', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '24/4', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: 'KPMel6nOTgY' },
             { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
@@ -377,3 +377,4 @@
     </script>
 </body>
 </html>
+
