--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -140,12 +140,12 @@
             { id: 'PM22N', name: 'HAPPY BOOM 7" BESI', spec: '40/30/8', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM33N', name: 'HAPPY BOOM GLORIES (ASAP)', spec: '100/4/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: '33', name: 'HAPPY BOOM GLORIES (ASAP BINTANG)', spec: '64/6', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: '33N', name: 'HAPPY BOOM GLORIES (ASAP COLOUR)', spec: '100/2/25', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: '33N', name: 'HAPPY BOOM GLORIES (ASAP COLOUR)', spec: '100/2/25', category: '手持系列', isSoldOut: false, youtubeId: 'N7d15kr2MIw' },
             { id: 'PM44N', name: 'HAPPY BOOM FOUNTAIN (7" ICE CREAM)', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM66N', name: 'HAPPY BOOM HAPPINESS FOUNTAIN', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM77N', name: 'HAPPY BOOM GROUND BOOM FLOWER (GASING BATANG)', spec: '80/30', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM88N', name: 'HAPPY BOOM FIREWORK (A)', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: '88', name: 'HAPPY BOOM FIREWORK (FOUNTAIN) (B)', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: '88', name: 'HAPPY BOOM FIREWORK (FOUNTAIN) (B)', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: 'uktuVw3052Y' },
             { id: 'PM99N', name: 'HAPPY BOOM TOP GUN', spec: '30/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM1010N_50', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 50', spec: '50/12/12', category: '玩具烟花系列', isSoldOut: true, youtubeId: '' },
             { id: 'PM1010N_40', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 40', spec: '40/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
@@ -161,20 +161,20 @@
             { id: 'PM1717N', name: 'ASSORTED CELEBRATION CAKE REPEATER (4" 49 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'PM2323N', name: 'HAPPY BOOM SHOOT CAKE (4" 16 SHOT)', spec: '48/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'PM2424N', name: 'HAPPY BOOM SHOOT CAKE (4" 36 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
-            { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'Sr_rjUol9J0' },
             { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '4FBg9jcowP8' },
-            { id: '2525', name: 'HAPPY BOOM COLOUR SUN SPARKLE 18"', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: '2525', name: 'HAPPY BOOM COLOUR SUN SPARKLE 18"', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: 'zG_EYFxlaFA' },
             { id: 'PM2626N', name: 'HAPPY BOOM DUSH 30 (ROMAN CANDLE)', spec: '36/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM2727N', name: 'HAPPY BOOM TIKUS 50 (50 MISILES)', spec: '30/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM2828N', name: 'HAPPY BOOM BEE', spec: '3/100/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM3030N', name: 'HAPPY BOOM UFO (TOP GUN UFO)', spec: '60/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: '3030N', name: 'HAPPY BOOM TOP GUN (UFO)', spec: '36/4', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: '3030', name: 'HAPPY BOOM UFO 12 IN 1 (JELLYFISH)', spec: '20/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
+            { id: '3030N', name: 'HAPPY BOOM TOP GUN (UFO)', spec: '36/4', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'Wy1JN7y6B-4' },
+            { id: '3030', name: 'HAPPY BOOM UFO 12 IN 1 (JELLYFISH)', spec: '20/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'zK706M-TuKI' },
             { id: 'PM3232N', name: 'HAPPY BOOM PILI CRACKER (NAGA 3 MINUTES)', spec: '60/6', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'bGCh2DTkpco' },
             { id: 'PM3434N', name: 'HAPPY BOOM MANCIS', spec: '60/60/10', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: 'PM3636N', name: 'HAPPY BOOM 14" BESI', spec: '20/20/8', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM3737N', name: 'HAPPY BOOM THUNDER CLAP (ROCKETS)', spec: '30/20/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: '3737', name: 'HAPPY BOOM THUNDER CLAP (SPECIAL ROCKETS)', spec: '30/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
+            { id: '3737', name: 'HAPPY BOOM THUNDER CLAP (SPECIAL ROCKETS)', spec: '30/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '10UQ8L6zfjk' },
             { id: 'PM3838N', name: 'HAPPY BOOM CILI PADI', spec: '300/10/26', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '2IiR5_6IiaA' },
@@ -377,4 +377,5 @@
     </script>
 </body>
 </html>
+
 
