--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -186,7 +186,7 @@
             { id: 'PM4646N', name: 'HAPPY BOOM SHOOT CAKE (4" 25 SHOT)', spec: '24/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'PM4747N', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '24/4', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: 'KPMel6nOTgY' },
-            { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'GekgPU_puqA' },
             { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: '4228*', name: 'SHOOT CAKE (4" 228 SHOT)', spec: '3/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
@@ -377,5 +377,6 @@
     </script>
 </body>
 </html>
+
 
 
