--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -187,9 +187,9 @@
             { id: 'PM4747N', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '24/4', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: 'KPMel6nOTgY' },
             { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'GekgPU_puqA' },
-            { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'JLLPPNi-j4o' },
             { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
-            { id: '4228*', name: 'SHOOT CAKE (4" 228 SHOT)', spec: '3/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: '4228*', name: 'SHOOT CAKE (4" 228 SHOT)', spec: '3/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'pO0mzxd6CCQ' },
             { id: 'JL933', name: 'HAPPY BOOM DUSH 15 (ROMAN CANDLE)', spec: '80/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL944', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '40/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL988_MT', name: 'FOUNTAIN MONEY TREE', spec: '40/4', category: '花筒系列', isSoldOut: false, youtubeId: '' },
@@ -377,6 +377,7 @@
     </script>
 </body>
 </html>
+
 
 
 
