--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -393,10 +393,10 @@
             { id: 'JL988_MT', name: 'FOUNTAIN MONEY TREE', spec: '40/4', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL988', name: 'FOUNTAIN TRIANGLE FORTUNE (3 SEGI)', spec: '40/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9955', name: 'FOUNTAIN PEACOCK (5 CONE)', spec: '24/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL9966_F', name: 'FLYING FOUNTAIN', spec: '36/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: 'JL9966_F', name: 'FLYING FOUNTAIN', spec: '36/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'aB-S6iq0XmI' },
             { id: 'JL988_MD', name: 'PEARL BURST', spec: '60/10', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL988_HX', name: 'FOUNTAIN HEXA RADIANCE', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL9911', name: '3" MINI ICE CREAM', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: 'JL9911', name: '3" MINI ICE CREAM', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: 'dPmipDf-dSc' },
             { id: 'JL11_4', name: 'HAPPY BOOM SUNSET 4 COLOUR', spec: '30/6/20', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9966_K', name: 'HAPPY BOOM SUNSET KIPAS', spec: '12/2', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9500', name: 'POP POP COLOUR', spec: '12/50/35', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
@@ -430,3 +430,4 @@
     </script>
 </body>
 </html>
+
