--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -379,10 +379,10 @@
             { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4242N', name: 'HAPPY BOOM BANANA KECIL', spec: '60/6', category: '单发系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4444N', name: 'HAPPY BOOM 10 SHOOTS (DUSH NAGA)', spec: '40/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4545N', name: 'HAPPY BOOM 10"ICE CREAM (FOUNTAIN)', spec: '10/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4646N', name: 'HAPPY BOOM SHOOT CAKE (4" 25 SHOT)', spec: '24/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4747N', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '24/4', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM4444N', name: 'HAPPY BOOM 10 SHOOTS (DUSH NAGA)', spec: '40/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '8SlV5t6ixU0' },
+            { id: 'PM4545N', name: 'HAPPY BOOM 10"ICE CREAM (FOUNTAIN)', spec: '10/2', category: '花筒系列', isSoldOut: false, youtubeId: 'gq1VSRbaWf8' },
+            { id: 'PM4646N', name: 'HAPPY BOOM SHOOT CAKE (4" 25 SHOT)', spec: '24/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'TtvJ2iOd9nM' },
+            { id: 'PM4747N', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '24/4', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'YYmDq6jmg7s' },
             { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: 'KPMel6nOTgY' },
             { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'GekgPU_puqA' },
             { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'JLLPPNi-j4o' },
@@ -430,4 +430,5 @@
     </script>
 </body>
 </html>
+
 
