--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -377,8 +377,8 @@
             { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '2IiR5_6IiaA' },
             { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM4242N', name: 'HAPPY BOOM BANANA KECIL', spec: '60/6', category: '单发系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'Jk0WeaNw-As' },
+            { id: 'PM4242N', name: 'HAPPY BOOM BANANA KECIL', spec: '60/6', category: '单发系列', isSoldOut: false, youtubeId: '_JVq3xmPblg' },
             { id: 'PM4444N', name: 'HAPPY BOOM 10 SHOOTS (DUSH NAGA)', spec: '40/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '8SlV5t6ixU0' },
             { id: 'PM4545N', name: 'HAPPY BOOM 10"ICE CREAM (FOUNTAIN)', spec: '10/2', category: '花筒系列', isSoldOut: false, youtubeId: 'gq1VSRbaWf8' },
             { id: 'PM4646N', name: 'HAPPY BOOM SHOOT CAKE (4" 25 SHOT)', spec: '24/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'TtvJ2iOd9nM' },
@@ -430,5 +430,6 @@
     </script>
 </body>
 </html>
+
 
 
