--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -370,11 +370,11 @@
             { id: '3030', name: 'HAPPY BOOM UFO 12 IN 1 (JELLYFISH)', spec: '20/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'zK706M-TuKI' },
             { id: 'PM3232N', name: 'HAPPY BOOM PILI CRACKER (NAGA 3 MINUTES)', spec: '60/6', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'bGCh2DTkpco' },
             { id: 'PM3434N', name: 'HAPPY BOOM MANCIS', spec: '60/60/10', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
-            { id: 'PM3636N', name: 'HAPPY BOOM 14" BESI', spec: '20/20/8', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM3737N', name: 'HAPPY BOOM THUNDER CLAP (ROCKETS)', spec: '30/20/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM3636N', name: 'HAPPY BOOM 14" BESI', spec: '20/20/8', category: '手持系列', isSoldOut: false, youtubeId: 'SNpLyl4qy8k' },
+            { id: 'PM3737N', name: 'HAPPY BOOM THUNDER CLAP (ROCKETS)', spec: '30/20/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'oP-BW3ff5U8' },
             { id: '3737', name: 'HAPPY BOOM THUNDER CLAP (SPECIAL ROCKETS)', spec: '30/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '10UQ8L6zfjk' },
-            { id: 'PM3838N', name: 'HAPPY BOOM CILI PADI', spec: '300/10/26', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
-            { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM3838N', name: 'HAPPY BOOM CILI PADI', spec: '300/10/26', category: '传统鞭炮', isSoldOut: false, youtubeId: 'MY2faXTcaSQ' },
+            { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: 'HjjnCoOerCc' },
             { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '2IiR5_6IiaA' },
             { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: '' },
             { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'Jk0WeaNw-As' },
@@ -430,6 +430,7 @@
     </script>
 </body>
 </html>
+
 
 
 
