--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -345,11 +345,11 @@
             { id: 'PM88N', name: 'HAPPY BOOM FIREWORK (A)', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: '88', name: 'HAPPY BOOM FIREWORK (FOUNTAIN) (B)', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: 'uktuVw3052Y' },
             { id: 'PM99N', name: 'HAPPY BOOM TOP GUN', spec: '30/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1010N_50', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 50', spec: '50/12/12', category: '玩具烟花系列', isSoldOut: true, youtubeId: '' },
-            { id: 'PM1010N_40', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 40', spec: '40/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1111N', name: 'HAPPY BOOM DUSH 20 (ROMAN CANDLE)', spec: '48/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1212N', name: 'HAPPY BOOM PILI CRACKER (TELUR NAGA)', spec: '72/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1313N', name: 'HAPPY BOOM (8FT) RED CRACKER', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
+            { id: 'PM1010N_50', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 50', spec: '50/12/12', category: '玩具烟花系列', isSoldOut: true, youtubeId: 'ie1VyOJ6YOk' },
+            { id: 'PM1010N_40', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 40', spec: '40/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'ie1VyOJ6YOk' },
+            { id: 'PM1111N', name: 'HAPPY BOOM DUSH 20 (ROMAN CANDLE)', spec: '48/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'wLPdCBEQieI' },
+            { id: 'PM1212N', name: 'HAPPY BOOM PILI CRACKER (TELUR NAGA)', spec: '72/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'JlyYeJrSTuo' },
+            { id: 'PM1313N', name: 'HAPPY BOOM (8FT) RED CRACKER', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: 'VvlvYVA6qAU' },
             { id: '1313', name: 'HAPPY BOOM 8 FEET RED CRACKER (ROSE)', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: '50k', name: 'HAPPY BOOM (150000) RED CRACKER', spec: '4/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: 'PM1515N', name: 'HAPPY BOOM (38 FT) SPECIAL RED CRACKER', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
@@ -362,14 +362,14 @@
             { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'Sr_rjUol9J0' },
             { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '4FBg9jcowP8' },
             { id: '2525', name: 'HAPPY BOOM COLOUR SUN SPARKLE 18"', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: 'zG_EYFxlaFA' },
-            { id: 'PM2626N', name: 'HAPPY BOOM DUSH 30 (ROMAN CANDLE)', spec: '36/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM2727N', name: 'HAPPY BOOM TIKUS 50 (50 MISILES)', spec: '30/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM2828N', name: 'HAPPY BOOM BEE', spec: '3/100/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM3030N', name: 'HAPPY BOOM UFO (TOP GUN UFO)', spec: '60/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM2626N', name: 'HAPPY BOOM DUSH 30 (ROMAN CANDLE)', spec: '36/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'vx9MkqQl8kg' },
+            { id: 'PM2727N', name: 'HAPPY BOOM TIKUS 50 (50 MISILES)', spec: '30/2', category: '花筒系列', isSoldOut: false, youtubeId: 'O-0CBkrhi7k' },
+            { id: 'PM2828N', name: 'HAPPY BOOM BEE', spec: '3/100/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'f0XNRvu1kyQ' },
+            { id: 'PM3030N', name: 'HAPPY BOOM UFO (TOP GUN UFO)', spec: '60/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'Y7fDM-QsbrI' },
             { id: '3030N', name: 'HAPPY BOOM TOP GUN (UFO)', spec: '36/4', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'Wy1JN7y6B-4' },
             { id: '3030', name: 'HAPPY BOOM UFO 12 IN 1 (JELLYFISH)', spec: '20/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'zK706M-TuKI' },
             { id: 'PM3232N', name: 'HAPPY BOOM PILI CRACKER (NAGA 3 MINUTES)', spec: '60/6', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'bGCh2DTkpco' },
-            { id: 'PM3434N', name: 'HAPPY BOOM MANCIS', spec: '60/60/10', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
+            { id: 'PM3434N', name: 'HAPPY BOOM MANCIS', spec: '60/60/10', category: '传统鞭炮', isSoldOut: false, youtubeId: 'NgQu9qz70wM' },
             { id: 'PM3636N', name: 'HAPPY BOOM 14" BESI', spec: '20/20/8', category: '手持系列', isSoldOut: false, youtubeId: 'SNpLyl4qy8k' },
             { id: 'PM3737N', name: 'HAPPY BOOM THUNDER CLAP (ROCKETS)', spec: '30/20/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'oP-BW3ff5U8' },
             { id: '3737', name: 'HAPPY BOOM THUNDER CLAP (SPECIAL ROCKETS)', spec: '30/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '10UQ8L6zfjk' },
@@ -430,6 +430,7 @@
     </script>
 </body>
 </html>
+
 
 
 
