--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -334,17 +334,17 @@
 
         // --- PRODUCT DATA (Same as before) ---
         const products = [
-            { id: 'PM11N', name: 'HAPPY BOOM GLOW OF SUNSET', spec: '60/4/25', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM22N', name: 'HAPPY BOOM 7" BESI', spec: '40/30/8', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM33N', name: 'HAPPY BOOM GLORIES (ASAP)', spec: '100/4/50', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM11N', name: 'HAPPY BOOM GLOW OF SUNSET', spec: '60/4/25', category: '手持系列', isSoldOut: false, youtubeId: 'MhFwVRAu1fI' },
+            { id: 'PM22N', name: 'HAPPY BOOM 7" BESI', spec: '40/30/8', category: '手持系列', isSoldOut: false, youtubeId: 'WuGJeQxpEfM' },
+            { id: 'PM33N', name: 'HAPPY BOOM GLORIES (ASAP)', spec: '100/4/50', category: '手持系列', isSoldOut: false, youtubeId: 'O7PMO_LAt40' },
             { id: '33', name: 'HAPPY BOOM GLORIES (ASAP BINTANG)', spec: '64/6', category: '手持系列', isSoldOut: false, youtubeId: '' },
             { id: '33N', name: 'HAPPY BOOM GLORIES (ASAP COLOUR)', spec: '100/2/25', category: '手持系列', isSoldOut: false, youtubeId: 'N7d15kr2MIw' },
-            { id: 'PM44N', name: 'HAPPY BOOM FOUNTAIN (7" ICE CREAM)', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM66N', name: 'HAPPY BOOM HAPPINESS FOUNTAIN', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM77N', name: 'HAPPY BOOM GROUND BOOM FLOWER (GASING BATANG)', spec: '80/30', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
-            { id: 'PM88N', name: 'HAPPY BOOM FIREWORK (A)', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM44N', name: 'HAPPY BOOM FOUNTAIN (7" ICE CREAM)', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: 'Bg4tsgfOJWI' },
+            { id: 'PM66N', name: 'HAPPY BOOM HAPPINESS FOUNTAIN', spec: '48/2', category: '花筒系列', isSoldOut: false, youtubeId: 'lC9FS1wTuJA' },
+            { id: 'PM77N', name: 'HAPPY BOOM GROUND BOOM FLOWER (GASING BATANG)', spec: '80/30', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'tz06Scblop0' },
+            { id: 'PM88N', name: 'HAPPY BOOM FIREWORK (A)', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: 'lxY5JoFww9I' },
             { id: '88', name: 'HAPPY BOOM FIREWORK (FOUNTAIN) (B)', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: 'uktuVw3052Y' },
-            { id: 'PM99N', name: 'HAPPY BOOM TOP GUN', spec: '30/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
+            { id: 'PM99N', name: 'HAPPY BOOM TOP GUN', spec: '30/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'GO9Wjqxm3yg' },
             { id: 'PM1010N_50', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 50', spec: '50/12/12', category: '玩具烟花系列', isSoldOut: true, youtubeId: 'ie1VyOJ6YOk' },
             { id: 'PM1010N_40', name: 'HAPPY BOOM FLOWER CAMELIA FLOWER 40', spec: '40/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'ie1VyOJ6YOk' },
             { id: 'PM1111N', name: 'HAPPY BOOM DUSH 20 (ROMAN CANDLE)', spec: '48/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'wLPdCBEQieI' },
@@ -376,7 +376,7 @@
             { id: 'PM3838N', name: 'HAPPY BOOM CILI PADI', spec: '300/10/26', category: '传统鞭炮', isSoldOut: false, youtubeId: 'MY2faXTcaSQ' },
             { id: 'PM3939N', name: 'HAPPY BOOM SUNSET BESAR', spec: '40/2/50', category: '手持系列', isSoldOut: false, youtubeId: 'HjjnCoOerCc' },
             { id: 'PM4040N', name: 'HAPPY BOOM BANANA HUJAN (A)', spec: '24/6', category: '单发系列', isSoldOut: false, youtubeId: '2IiR5_6IiaA' },
-            { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: '' },
+            { id: '4040', name: 'HAPPY BOOM BANANA HUJAN (B) (3 SHOT)', spec: '18/3', category: '单发系列', isSoldOut: false, youtubeId: 'iiRqVSTNOTY' },
             { id: 'PM4141N', name: 'HAPPY BOOM MOON TRAVER (ROCKETS)', spec: '36/12/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'Jk0WeaNw-As' },
             { id: 'PM4242N', name: 'HAPPY BOOM BANANA KECIL', spec: '60/6', category: '单发系列', isSoldOut: false, youtubeId: '_JVq3xmPblg' },
             { id: 'PM4444N', name: 'HAPPY BOOM 10 SHOOTS (DUSH NAGA)', spec: '40/6', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '8SlV5t6ixU0' },
@@ -389,16 +389,16 @@
             { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
             { id: '4228*', name: 'SHOOT CAKE (4" 228 SHOT)', spec: '3/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'pO0mzxd6CCQ' },
             { id: 'JL933', name: 'HAPPY BOOM DUSH 15 (ROMAN CANDLE)', spec: '80/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL944', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '40/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL988_MT', name: 'FOUNTAIN MONEY TREE', spec: '40/4', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: 'JL944', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '40/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'KChd2_6-mJo' },
+            { id: 'JL988_MT', name: 'FOUNTAIN MONEY TREE', spec: '40/4', category: '花筒系列', isSoldOut: false, youtubeId: 'bxYMOzrsyjs' },
             { id: 'JL988', name: 'FOUNTAIN TRIANGLE FORTUNE (3 SEGI)', spec: '40/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL9955', name: 'FOUNTAIN PEACOCK (5 CONE)', spec: '24/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
+            { id: 'JL9955', name: 'FOUNTAIN PEACOCK (5 CONE)', spec: '24/1', category: '花筒系列', isSoldOut: false, youtubeId: 'a2G5A8MeGb4' },
             { id: 'JL9966_F', name: 'FLYING FOUNTAIN', spec: '36/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'aB-S6iq0XmI' },
             { id: 'JL988_MD', name: 'PEARL BURST', spec: '60/10', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL988_HX', name: 'FOUNTAIN HEXA RADIANCE', spec: '60/1', category: '花筒系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9911', name: '3" MINI ICE CREAM', spec: '72/6', category: '花筒系列', isSoldOut: false, youtubeId: 'dPmipDf-dSc' },
             { id: 'JL11_4', name: 'HAPPY BOOM SUNSET 4 COLOUR', spec: '30/6/20', category: '手持系列', isSoldOut: false, youtubeId: '' },
-            { id: 'JL9966_K', name: 'HAPPY BOOM SUNSET KIPAS', spec: '12/2', category: '手持系列', isSoldOut: false, youtubeId: '' },
+            { id: 'JL9966_K', name: 'HAPPY BOOM SUNSET KIPAS', spec: '12/2', category: '手持系列', isSoldOut: false, youtubeId: 'dkEBIqCypT4' },
             { id: 'JL9500', name: 'POP POP COLOUR', spec: '12/50/35', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9500_B', name: 'POP POP COLOUR (BIG)', spec: '12/40/20', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL9500_T', name: 'THUNDER POP POP', spec: '12/12/20', category: '玩具烟花系列', isSoldOut: false, youtubeId: '' },
@@ -430,6 +430,7 @@
     </script>
 </body>
 </html>
+
 
 
 
