--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -350,15 +350,15 @@
             { id: 'PM1111N', name: 'HAPPY BOOM DUSH 20 (ROMAN CANDLE)', spec: '48/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'wLPdCBEQieI' },
             { id: 'PM1212N', name: 'HAPPY BOOM PILI CRACKER (TELUR NAGA)', spec: '72/12/12', category: '玩具烟花系列', isSoldOut: false, youtubeId: 'JlyYeJrSTuo' },
             { id: 'PM1313N', name: 'HAPPY BOOM (8FT) RED CRACKER', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: 'VvlvYVA6qAU' },
-            { id: '1313', name: 'HAPPY BOOM 8 FEET RED CRACKER (ROSE)', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
+            { id: '1313', name: 'HAPPY BOOM 8 FEET RED CRACKER (ROSE)', spec: '40/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '8ARJ2vaK0ZM' },
             { id: '50k', name: 'HAPPY BOOM (150000) RED CRACKER', spec: '4/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1515N', name: 'HAPPY BOOM (38 FT) SPECIAL RED CRACKER', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
-            { id: '1515N', name: 'HAPPY BOOM (38 FT) RED CRACKER (GOLD)', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
+            { id: 'PM1515N', name: 'HAPPY BOOM (38 FT) SPECIAL RED CRACKER', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: 'lg7tFouDsTU' },
+            { id: '1515N', name: 'HAPPY BOOM (38 FT) RED CRACKER (GOLD)', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '_e1QsSuO35M' },
             { id: '1515', name: 'HAPPY BOOM (38FT) RED & GOLD CRACKER', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: '1515VIP', name: 'HAPPY BOOM (108 FT) ROSE RED CRACKER', spec: '3/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
-            { id: 'PM1717N', name: 'ASSORTED CELEBRATION CAKE REPEATER (4" 49 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: 'PM1717N', name: 'ASSORTED CELEBRATION CAKE REPEATER (4" 49 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'qw86U9kKeGU' },
             { id: 'PM2323N', name: 'HAPPY BOOM SHOOT CAKE (4" 16 SHOT)', spec: '48/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
-            { id: 'PM2424N', name: 'HAPPY BOOM SHOOT CAKE (4" 36 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: 'PM2424N', name: 'HAPPY BOOM SHOOT CAKE (4" 36 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'jy1KnVFV_pI' },
             { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'Sr_rjUol9J0' },
             { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '4FBg9jcowP8' },
             { id: '2525', name: 'HAPPY BOOM COLOUR SUN SPARKLE 18"', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: 'zG_EYFxlaFA' },
@@ -386,7 +386,7 @@
             { id: 'PM4848N', name: 'HAPPY BOOM 15" ICE CREAM (FOUNTAIN)', spec: '6/2', category: '花筒系列', isSoldOut: false, youtubeId: 'KPMel6nOTgY' },
             { id: '4138*', name: 'SHOOT CAKE (4" 138 SHOT)', spec: '6/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'GekgPU_puqA' },
             { id: '4168*', name: 'SHOOT CAKE (4" 168 SHOT)', spec: '4/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'JLLPPNi-j4o' },
-            { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: 'V4168*', name: 'VIP SHOOT CAKE (4" 168 SHOT)', spec: '5/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'uxYejRBE7aM' },
             { id: '4228*', name: 'SHOOT CAKE (4" 228 SHOT)', spec: '3/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'pO0mzxd6CCQ' },
             { id: 'JL933', name: 'HAPPY BOOM DUSH 15 (ROMAN CANDLE)', spec: '80/12', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: '' },
             { id: 'JL944', name: 'HAPPY BOOM 8 SHOOTS ROMAN CANDLE', spec: '40/3', category: '吐珠/火箭系列', isSoldOut: false, youtubeId: 'KChd2_6-mJo' },
@@ -430,6 +430,7 @@
     </script>
 </body>
 </html>
+
 
 
 
