--- a/raya-catalog/index.html
+++ b/raya-catalog/index.html
@@ -357,7 +357,7 @@
             { id: '1515', name: 'HAPPY BOOM (38FT) RED & GOLD CRACKER', spec: '6/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: '1515VIP', name: 'HAPPY BOOM (108 FT) ROSE RED CRACKER', spec: '3/1', category: '传统鞭炮', isSoldOut: false, youtubeId: '' },
             { id: 'PM1717N', name: 'ASSORTED CELEBRATION CAKE REPEATER (4" 49 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'qw86U9kKeGU' },
-            { id: 'PM2323N', name: 'HAPPY BOOM SHOOT CAKE (4" 16 SHOT)', spec: '48/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '' },
+            { id: 'PM2323N', name: 'HAPPY BOOM SHOOT CAKE (4" 16 SHOT)', spec: '48/1', category: '盆花/大组合', isSoldOut: false, youtubeId: '55QvDo5DEZE' },
             { id: 'PM2424N', name: 'HAPPY BOOM SHOOT CAKE (4" 36 SHOT)', spec: '16/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'jy1KnVFV_pI' },
             { id: '2424N', name: 'HAPPY BOOM SHOOT CAKES (100 SHOT)', spec: '40/1', category: '盆花/大组合', isSoldOut: false, youtubeId: 'Sr_rjUol9J0' },
             { id: 'PM2525N', name: 'HAPPY BOOM 18" BESI', spec: '20/20/6', category: '手持系列', isSoldOut: false, youtubeId: '4FBg9jcowP8' },
@@ -430,6 +430,7 @@
     </script>
 </body>
 </html>
+
 
 
 
